log
Thu 05 Oct 2023 01:11:28 AM UTC: 
 tests:  0|5
total_score: 0/70
7aad0a3
Thu 05 Oct 2023 01:29:42 AM UTC: 
 sudoku.c | 25 +++++++++++--------------
 1 file changed, 11 insertions(+), 14 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:61:22: error: expected ‘;’ before ‘}’ token
   61 |     nodo = top(stack)
      |                      ^
      |                      ;
   62 |   }
      |   ~                   
sudoku.c:60:11: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   60 |     Node *nodo;
      |           ^~~~
sudoku.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cc4378d
Thu 05 Oct 2023 01:30:23 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:60:11: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   60 |     Node *nodo;
      |           ^~~~
sudoku.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
96a3f53
Thu 05 Oct 2023 01:31:27 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:64:18: error: expected expression before ‘Node’
   64 |     if (is_final(Node) == 10) {
      |                  ^~~~
sudoku.c:67:18: error: expected expression before ‘Node’
   67 |     if (is_final(Node) == 1) {
      |                  ^~~~
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ac4b18a
Thu 05 Oct 2023 01:33:58 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:64:18: error: expected expression before ‘Node’
   64 |     if (is_final(Node) == 10) {
      |                  ^~~~
sudoku.c:67:18: error: expected expression before ‘Node’
   67 |     if (is_final(Node) == 1) {
      |                  ^~~~
sudoku.c:71:31: error: expected expression before ‘Node’
   71 |     List *adj = get_adj_nodes(Node);
      |                               ^~~~
Compilation failed
5f8b288
Thu 05 Oct 2023 01:43:16 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
ca1ea34
Thu 05 Oct 2023 01:45:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
db6f976
Thu 05 Oct 2023 02:02:49 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
a9e2042
Thu 05 Oct 2023 02:10:18 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
e3abb40
Thu 05 Oct 2023 02:11:38 AM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5a0c66a
Thu 05 Oct 2023 02:15:55 AM UTC: 
 sudoku.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
20f0bfc
Thu 05 Oct 2023 02:18:20 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
f8585dc
Thu 05 Oct 2023 02:18:56 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
2ca49ef
Thu 05 Oct 2023 09:11:08 PM UTC: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
36f93ab
Thu 05 Oct 2023 09:16:09 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e25bc45
Thu 05 Oct 2023 09:19:58 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
86f2f3b
Thu 05 Oct 2023 09:41:58 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:81:7: error: expected ‘,’ or ‘;’ before ‘}’ token
   81 |       }
      |       ^
sudoku.c:80:13: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |         int i = 3 * (k / 3) + (p / 3)
      |             ^
sudoku.c:77:11: error: unused variable ‘array’ [-Werror=unused-variable]
   77 |       int array[10] = {};
      |           ^~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
59fcf99
Thu 05 Oct 2023 09:43:41 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:82:9: error: statement with no effect [-Werror=unused-value]
   82 |         valor
      |         ^~~~~
sudoku.c:82:14: error: expected ‘;’ before ‘}’ token
   82 |         valor
      |              ^
      |              ;
   83 |       }
      |       ~       
sudoku.c:81:13: error: unused variable ‘j’ [-Werror=unused-variable]
   81 |         int j = 3 * (k % 3) + (p % 3);
      |             ^
sudoku.c:80:13: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |         int i = 3 * (k / 3) + (p / 3);
      |             ^
sudoku.c:77:11: error: unused variable ‘array’ [-Werror=unused-variable]
   77 |       int array[10] = {};
      |           ^~~~~
sudoku.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9422c98
